# homelab

./: .cursorignore  .dockerignore  .env.example  .gitignore  AGENTS.md  OUTSTANDING-DEPLOYMENTS.md  README.md  bootstrap.py  cassandra_metrictank_example.yaml  config.py  homelab.code-workspace  pipeline.sh  plasma-distro-release-notifier_20241226-0ubuntu3.2_amd64.deb
.codex/: config.toml
.config/: .env.example  README.md
.cursor/: mcp.json
.githooks/: post-commit  post-merge  post-rewrite  rag_embed_event.py  rag_path_excludes.py  run_embed_hook.sh
.github/: renovate.json
.secrets/: .env.example
applications/mcp-agent-protocol/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
applications/mcp-agent-protocol/src/mcp_agent_protocol/: __init__.py  server.py
applications/mcp-bash-pipeline/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
applications/mcp-bash-pipeline/src/mcp_bash_pipeline/: __init__.py  server.py
applications/mcp-filesystem/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
applications/mcp-filesystem/src/mcp_filesystem/: __init__.py  server.py
applications/mcp-filesystem/src/mcp_filesystem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
applications/mcp-redis/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
applications/mcp-redis/src/mcp_redis/: __init__.py  server.py
docker/: README.md  docker-compose.homelab-config.yaml  docker-compose.langgraph.yml  docker-compose.minio.yaml  docker-compose.yaml  docker-compose.yml
docs/: TODO.md  google-workspace-mcp-service-account-checklist.md  kubernetes-secrets.md  kubernetes-structure.md  talos-packages.md  terraform-structure.md  tfvars.md
examples/: truenas_metrics.txt
langgraph/: .dockerignore  README.md  pyproject.toml  run.sh
langgraph/apps/code-analysis-agent/: .env.example  agent.py  langgraph.json  mcp.json.example
langgraph/apps/controller-agent/: .env.example  agent.py  langgraph.json
langgraph/apps/jira-agent/: .env.example  agent.py  langgraph.json  mcp.json.example
langgraph/apps/jira-agent/skills/jira-coordination/: SKILL.md
langgraph/apps/jira-agent/subagents/create-issue/: mcp.json.example
langgraph/apps/jira-agent/subagents/create-issue/skills/create-issue/: SKILL.md
langgraph/apps/jira-agent/subagents/edit-issue/: mcp.json.example
langgraph/apps/jira-agent/subagents/edit-issue/skills/edit-issue/: SKILL.md
langgraph/src/homelab_langgraph/: __init__.py  agent_factories.py
packer/: README.md  arch-ndysu.pkr.hcl  build.sh  centos-ndysu.pkr.hcl  kali-ndysu.pkr.hcl  packer.sh  ubuntu-24.04-ndysu.pkr.hcl  ubuntu-ndysu.pkr.hcl  upload.sh
scripts/: docker_volume_backup_manual.sh  graphite_inventory.py  vault_bootstrap.sh  vault_seal.sh  (+1 more)
(+2774 files in other folders)
