[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-langgraph"
version = "0.1.0"
description = "Initial LangGraph/Deep Agents monorepo scaffold for homelab agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "deepagents",
  "httpx",
  "langchain",
  "langchain-mcp-adapters",
  "langchain-openai",
  "python-dotenv",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
