[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-agent-protocol"
version = "0.1.0"
description = "Redis-backed MCP server for agent coordination and protocol envelopes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mcp[cli]==1.27.0",
  "redis==7.4.0",
  "uvicorn==0.44.0",
]

[project.scripts]
mcp-agent-protocol = "mcp_agent_protocol.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_agent_protocol"]
