[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-bash-pipeline"
version = "0.1.0"
description = "Native Streamable HTTP MCP server for homelab bash pipeline entrypoints."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mcp==1.27.0",
  "uvicorn==0.34.2",
]

[project.scripts]
mcp-bash-pipeline = "mcp_bash_pipeline.server:main"

[tool.setuptools]
packages = ["mcp_bash_pipeline"]
package-dir = {"" = "src"}
