[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-redis"
version = "0.1.0"
description = "Native Streamable HTTP MCP server for Redis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mcp==1.27.0",
  "redis[hiredis]==7.0.0",
  "uvicorn==0.34.2",
]

[project.scripts]
mcp-redis = "mcp_redis.server:main"

[tool.setuptools]
packages = ["mcp_redis"]
package-dir = {"" = "src"}
